# MAE263C_CatcherProject

./: .gitignore  README.md  read_write_node_PWMFunctions.cpp
Centralized_Control_Iterative_PID/: CentralizedControlLQRMain.m  LatencyOffset.m  ThetaDifferentiator.m
DecentralisedPID/: DynamixelPID.cpp  DynamixelPID.m  README
DockerROS/: .gitignore  Dockerfile  READme.md  docker-compose.yml
DockerROS/.devcontainer/: devcontainer.json
DockerROS/SimulationFiles/src/ball_detector/: CMakeLists.txt  package.xml
DockerROS/SimulationFiles/src/ball_detector/launch/: nodeEx.launch.py
DockerROS/SimulationFiles/src/ball_detector/src/: ball_predictor_node.cpp  pixel_to_xy_bridge.cpp
DockerROS/SimulationFiles/src/controller_msgs/: CMakeLists.txt  package.xml
DockerROS/SimulationFiles/src/controller_msgs/msg/: JointPlotData.msg  SetXY.msg
DockerROS/SimulationFiles/src/controller_node/: CMakeLists.txt  package.xml
DockerROS/SimulationFiles/src/controller_node/launch/: actuation.launch.py
DockerROS/SimulationFiles/src/controller_node/src/: pwm_position_node.cpp
DockerROS/SimulationFiles/src/idc_node/: CMakeLists.txt
DockerROS/SimulationFiles/src/idc_node/msg/: JointPlotData.msg
DockerROS/SimulationFiles/src/idc_node/src/: inverse_dynamics_node.cpp  inverse_dynamics_node_0526.cpp
DockerROS/SimulationFiles/src/inverse_kinematics_node/: CMakeLists.txt  package.xml
DockerROS/SimulationFiles/src/inverse_kinematics_node/src/: inverse_kinematics_node_0526.cpp
DockerROS/SimulationFiles/src/pwm_position_node/: CMakeLists.txt
DockerROS/SimulationFiles/src/pwm_position_node/config/: independent_joint_control_E.yaml
EffortPlots/: PlotData.py  log.csv
MATLAB_TestCode/63A_refCode/: 04_19_Test_ID1.csv  04_19_Test_ID4.csv  Dynamixel_MotorTests.csv  Dynamixel_MotorTests.xlsx  Gripper_matlabcode.m  Test.asv  Test.m  initialize.asv  main.m  map_angle2pris.m  map_pris2angle.m  proj_FK.m  proj_IK.m  proj_IK_with_slider.m
ReferenceMedia/: Text
ReferenceMedia/DecentralizedPWM/: pwm_position_node_DataSet_AngleTrajectory_q1.jpegkp_125_ki_0.1_kd_50.0  pwm_position_node_DataSet_AngleTrajectory_q1.jpegkp_200_ki_0.1_kd_5.0  pwm_position_node_DataSet_AngleTrajectory_q2.jpegkp_125_ki_0.1_kd_50.0  pwm_position_node_DataSet_AngleTrajectory_q2.jpegkp_200_ki_0.1_kd_5.0  text
ReferenceMedia/JointSpace_InverseDynamics/: joint_space_idc_DataSet_AngleTrajectory_q1.jpegkp1_120_kd1_0.04_kp2_120_kd2_0.8_  joint_space_idc_DataSet_AngleTrajectory_q1.jpegkp1_165_kd1_3.5_kp2_165_kd2_5.0_  joint_space_idc_DataSet_AngleTrajectory_q2.jpegkp1_120_kd1_0.04_kp2_120_kd2_0.8_  joint_space_idc_DataSet_AngleTrajectory_q2.jpegkp1_165_kd1_3.5_kp2_165_kd2_5.0_  text
ReferenceMedia/JointSpace_RobustControl/: robust_joint_control_DataSet_AngleTrajectory_q1.jpegkp1_230_kd1_2_kp2_190_kd2_7.2_rho_0.5_ep_0.1  robust_joint_control_DataSet_AngleTrajectory_q1.jpegkp1_500_kd1_0.01_kp2_300_kd2_0.07_rho_0.5_ep_0.1  robust_joint_control_DataSet_AngleTrajectory_q2.jpegkp1_230_kd1_2_kp2_190_kd2_7.2_rho_0.5_ep_0.1  robust_joint_control_DataSet_AngleTrajectory_q2.jpegkp1_500_kd1_0.01_kp2_300_kd2_0.07_rho_0.5_ep_0.1  text
ReferenceMedia/OpSpace_InverseDynamics/: inverse_dynamics_node_DataSet_AngleTrajectory_q1.jpegkp1_150_kd1_8.0_kp2_150_kd2_8.0_  inverse_dynamics_node_DataSet_AngleTrajectory_q1.jpegkp1_230_kd1_3.0_kp2_230_kd2_3.0_  inverse_dynamics_node_DataSet_AngleTrajectory_q2.jpegkp1_150_kd1_8.0_kp2_150_kd2_8.0_  inverse_dynamics_node_DataSet_AngleTrajectory_q2.jpegkp1_230_kd1_3.0_kp2_230_kd2_3.0_  text
TestDriveCode/: motorRun.py
install/: local_setup.sh  setup.sh
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/: port
ros2_ws/src/adaptive_joint_control/: CMakeLists.txt  package.xml
ros2_ws/src/adaptive_joint_control/src/: adaptive_joint_control.cpp
ros2_ws/src/adaptive_operational_control/: CMakeLists.txt  package.xml
ros2_ws/src/adaptive_operational_control/src/: adaptive_operational_control.cpp
ros2_ws/src/ball_arm_tracker/: CMakeLists.txt  package.xml
ros2_ws/src/ball_arm_tracker/src/: pixel_to_xy_bridge.cpp  pixel_to_xy_bridge_0526.cpp
ros2_ws/src/ball_centroid_detector/: CMakeLists.txt  package.xml
ros2_ws/src/ball_centroid_detector/src/: detector.cpp
ros2_ws/src/ball_predictor_node/: CMakeLists.txt  package.xml
ros2_ws/src/ball_predictor_node/src/: ball_predictor_node.cpp  ball_predictor_node_0526.cpp
ros2_ws/src/control_common/: CMakeLists.txt  control_params.hpp  package.xml
ros2_ws/src/control_common/include/control_common/: control_utils.hpp
ros2_ws/src/idc_node/: CMakeLists.txt  package.xml
ros2_ws/src/idc_node/msg/: JointPlotData.msg
ros2_ws/src/idc_node/src/: inverse_dynamics_node.cpp  inverse_dynamics_node_2.cpp
ros2_ws/src/install/: setup.sh  (+1 more)
ros2_ws/src/joint_positions_node/: CMakeLists.txt
ros2_ws/src/joint_positions_node/src/: joint_positions_node.cpp
ros2_ws/src/joint_positions_node/srv/: GetJointDegrees.srv
ros2_ws/src/joint_space_idc/: CMakeLists.txt  package.xml
ros2_ws/src/joint_space_idc/src/: joint_space_idc.cpp
ros2_ws/src/my_debug_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/pwm_position_node/: CMakeLists.txt  package.xml
ros2_ws/src/pwm_position_node/config/: independent_joint_control_E.yaml  independent_joint_control_J.yaml  independent_joint_control_M.yaml  independent_joint_control_T.yaml
ros2_ws/src/pwm_position_node/src/: pwm_position_node.cpp  pwm_position_node_0526.cpp  pwm_position_node_2.cpp
ros2_ws/src/robust_adaptive_operational_control/: CMakeLists.txt  package.xml
ros2_ws/src/robust_adaptive_operational_control/src/: robust_adaptive_operational_control.cpp
ros2_ws/src/robust_joint_control/: CMakeLists.txt  package.xml
ros2_ws/src/robust_joint_control/src/: robust_joint_control.cpp
ros2_ws/src/robust_operational_control/: CMakeLists.txt  package.xml
ros2_ws/src/robust_operational_control/src/: robust_operational_control.cpp
ros2_ws/src/vision_common/: CMakeLists.txt  package.xml
ros2_ws/src/vision_common/include/vision_common/: vision_params.hpp
(+601 files in other folders)
