cmake_minimum_required(VERSION 3.8)
project(adaptive_operational_control)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(controller_msgs REQUIRED)
find_package(control_common REQUIRED)
find_package(dynamixel_sdk REQUIRED)

add_executable(adaptive_operational_control
  src/adaptive_operational_control.cpp)
ament_target_dependencies(adaptive_operational_control
  rclcpp controller_msgs dynamixel_sdk control_common)
install(TARGETS adaptive_operational_control
  DESTINATION lib/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright anId license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
