<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adaptive_operational_control</name>
  <version>0.1.0</version>
  <description>Slotine-Li adaptive operational-space inverse-dynamics controller node for a planar 2-DOF arm</description>
  <maintainer email="manuelagp1999@gmail.com">manuel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>controller_msgs</depend>
  <depend>control_common</depend>
  <depend>dynamixel_sdk</depend>
  <depend>eigen3_cmake_module</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
