<!-- ~/ros2_ws/src/my_debug_pkg/package.xml -->
<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_debug_pkg</name>
  <version>0.0.0</version>
  <description>Package to check environment variables for GStreamer debugging</description>
  <maintainer email="manuel@todo.todo">manuel</maintainer> <!-- Change to your name/email -->
  <license>Apache License 2.0</license> <!-- Or your preferred license -->

  <depend>rclpy</depend> <!-- Add this if missing -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
