<?xml version="1.0"?>
<package format="3">
  <name>controller_msgs</name>
  <version>0.0.0</version>
  <description>Common SetXY and JointPlotData messages for all controllers</description>

  <maintainer email="manuelagp1999@gmail.com">manuel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>   <!-- ★ required -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

